--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^3.0.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.24",
     "expo-constants": "^16.0.2",
     "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
-    "yup": "^1.4.0",
-    "expo-location": "~17.0.1"
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
