--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "apisauce": "^3.0.1",
     "expo": "~51.0.24",
     "expo-constants": "^16.0.2",
     "expo-image-picker": "~15.0.7",
@@ -25,7 +26,8 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "lottie-react-native": "6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
