--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/hooks": "^3.0.0",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "apisauce": "^3.0.1",
     "expo": "~51.0.24",
+    "expo-blur": "^13.0.2",
     "expo-constants": "^16.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
@@ -22,8 +25,10 @@
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "lottie-react-native": "6.7.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.10.5",
