--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,9 +21,12 @@
     "expo-constants": "^16.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
-    "expo-permissions": "^14.4.0",
+    "expo-notifications": "~0.28.14",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "lottie-react-native": "6.7.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
