--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,9 +16,10 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "apisauce": "^3.0.1",
+    "dayjs": "^1.11.12",
     "expo": "~51.0.24",
     "expo-blur": "^13.0.2",
-    "expo-constants": "^16.0.2",
+    "expo-constants": "~16.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
     "expo-notifications": "~0.28.14",
@@ -28,7 +29,6 @@
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lottie-react-native": "6.7.0",
-    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-expo-image-cache": "^4.1.0",
@@ -36,7 +36,13 @@
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "@bugsnag/expo": "^51.0.0",
+    "expo-application": "~5.9.1",
+    "expo-crypto": "~13.0.2",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-updates": "~0.25.21"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
