--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -5,7 +5,8 @@
   "build": {
     "androidPreview1": {
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "channel": "preview"
       }
     },
     "androidPreview2": {
