--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@bugsnag/expo": "^51.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/netinfo": "11.3.1",
@@ -18,14 +19,19 @@
     "apisauce": "^3.0.1",
     "dayjs": "^1.11.12",
     "expo": "~51.0.24",
+    "expo-application": "~5.9.1",
     "expo-blur": "^13.0.2",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
     "expo-notifications": "~0.28.14",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.21",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lottie-react-native": "6.7.0",
@@ -34,15 +40,9 @@
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-progress": "^5.0.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "yup": "^1.4.0",
-    "@bugsnag/expo": "^51.0.0",
-    "expo-application": "~5.9.1",
-    "expo-crypto": "~13.0.2",
-    "expo-device": "~6.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-updates": "~0.25.21"
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
